--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <script src="assert.js"></script>
-    <script src="note-model.js"></script>
-    <script src="note-tests.js"></script>
+    <script src="spec/assert.js"></script>
+    <script src="src/note-model.js"></script>
+    <script src="spec/note-tests.js"></script>
+    <script src="spec/note-list-spec.js"></script>
   </head>
   <body></body>
 </html>
