--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
   <head>
 
-    <script src="src/note-model.js"></script>
     <script src="src/notelist.js"></script>
-
+    <script src="src/note-model.js"></script>
     <script src="spec/assert.js"></script>
     <script src="spec/note-tests.js"></script>
     <script src="spec/note-list-spec.js"></script>
+
+
   </head>
   <body></body>
-</html>
+</html>j
